# testing-pytorch

./: .gitignore  LICENSE  README.md  flake.nix  pyproject.toml
src/: main.py
src/lib/: __init__.py  base.py  device.py  functions.py  functions_2d.py  gates.py  mnist_simple.py  search_hparams.py  training_params.py  training_result.py
src/lib/build_models/: functions.py  functions_2d.py  gates.py  mnist_balanced.py  mnist_fashion.py  mnist_simple.py
src/lib/data_saver/: loader.py  tensor_data.py  tensor_loader.py
src/lib/models/: __init__.py  base_model.py  classic.py  sequential.py  sigmoid.py
src/lib/modules/: base_model.py  classic.py  sequential.py  sigmoid.py
src/lib/utils/: linear_generator.py
tests/: test_classic_model.py  test_functions_2d_training.py  test_functions_training.py  test_gates_training.py  test_hello.py
