[project]
name = "testing-pytorch"
version = "0.1.0"
description = "Testing the usage of pytorch"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "pytest>=9.0.2",
    "pytest-sugar>=1.1.1",
    "pytest-xdist>=3.8.0",
    "rich>=14.3.3",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
]
